@@ -41,6 +41,7 @@ Maintenance
 * Upgrade to curl 7.50.3 for static and Windows builds
 * Content-Type for JSON documents is now "application/json; charset=utf-8"
 * Ignore "Group Length" tags in C-FIND queries
+* Fix handling of worklist SCP with ReferencedStudySequence and ReferencedPatientSequence
 
 
 Version 1.1.0 (2016/06/27)
